# HLearn

./: .gitignore  .gitmodules  .travis.yml  HLearn.cabal  HMine.cabal  LICENSE  README  README.md  hlearn.cabal  stack.yaml  subhask
HLearn-algebra/: HLearn-algebra.cabal
HLearn-algebra/src/HLearn/: Algebra.hs
HLearn-algebra/src/HLearn/Algebra/: BaseClasses.hs  FunctionTypes.hs  Functions.hs  Groups.hs  HVector.hs  HomTrainer.hs  Models.hs  Modules.hs  Morphism.hs  Simplified.hs  Structures.hs  Trainers.hs  Tuple.hs
HLearn-algebra/src/HLearn/Algebra/Models/: CoHomTrainer.hs  HomTrainer.hs  Lame.hs
HLearn-algebra/src/HLearn/Algebra/Models/Examples/: Counter.hs
HLearn-algebra/src/HLearn/Algebra/Models/Free/: MonoidBoost.hs  MonoidChain.hs
HLearn-algebra/src/HLearn/Algebra/Structures/: Groups.hs  MetricSpace.hs  Modules.hs  Triangles.hs
HLearn-algebra/src/HLearn/Algebra/Structures/Free/: Bagging.hs  FreeHomTrainer.hs  FreeModule.hs  RegSG2Group.hs
HLearn-algebra/src/HLearn/Algebra/Types/: HList.hs  Indexing.hs  Nat1.hs  Nat1Generator.hs
HLearn-algebra/src/dev-test/: Types.hs  test.hs
HLearn-algebra/src/examples/: stackoverflow-question.hs
HLearn-approximation/: HLearn-approximation.cabal
HLearn-approximation/src/HLearn/NPHard/: BinPacking.hs  KCenters.hs  Scheduling.hs
HLearn-approximation/src/examples/tmr/: students.csv  tmr.dbj  tmr.lhs  tmr.tex
HLearn-classification/: HLearn-classification.cabal
HLearn-classification/src/HLearn/: DataContainers.hs
HLearn-classification/src/HLearn/DataContainers/: DS_List.hs
HLearn-classification/src/HLearn/Evaluation/: CrossValidation.hs  CrossValidationHom.hs  RSquared.hs
HLearn-classification/src/HLearn/Models/: Classification.hs  Classifiers.hs  DistributionContainer.hs  Ensemble.hs
HLearn-classification/src/HLearn/Models/Classifiers/: Bayes.hs  BayesOld.hs  Boosting.hs  Centroid.hs  Common.hs  HTree.hs  HomTree.hs  NBayes.hs  NearestNeighbor.hs  Perceptron.hs
HLearn-classification/src/HLearn/Models/Classifiers/Experimental/Boosting/: FiniteBoost.hs  (+2 more)
HLearn-classification/src/HLearn/Models/Classifiers/Lame/: AdaBoost.hs
HLearn-classification/src/HLearn/Models/Regression/: Exponential.hs  Logarithmic.hs  ModifiedExponential.hs  PowerLaw.hs
HLearn-classification/src/dev-test/: bayes.hs
HLearn-classification/src/examples/: Criterion.hs  DebugTest.hs  TestOldStyle.hs  bayes-manyattributes.hs  blogcensus.lhs  dynamic.hs  tic-tac-toe.hs
HLearn-classification/src/examples/weka-cv/: Readme.md  adult-1000.csv  adult-1000.csv.arff  adult-10000.csv  adult-10000.csv.arff  adult-2000.csv  adult-2000.csv.arff  adult-3000.csv  adult-3000.csv.arff  adult-4000.csv  adult-4000.csv.arff  adult-5000.csv  adult-5000.csv.arff  adult-6000.csv  adult-6000.csv.arff  adult-7000.csv  adult-7000.csv.arff  adult-8000.csv  adult-8000.csv.arff  adult-9000.csv  adult-9000.csv.arff  adult.csv  adult.csv.arff  csv2arff.sh  hlearn-cv.lhs  timing.sh  weka-cv.sh
HLearn-datastructures/: HLearn-datastructures.cabal
HLearn-datastructures/src/Data/: DependentIndexing.hs  Prunable.hs
HLearn-datastructures/src/HLearn/DataStructures/: BinarySearchTree.hs  BinarySearchTree.lhs  CoverTree.hs  CoverTreeNoopt.hs  CoverTreeOpt2.hs  KDIsomorphism.hs  KDSortedVector.hs  KDTree.hs  KDTree.lhs  KDTreeOld.hs  SortedVector.hs  SpaceTree.hs
HLearn-datastructures/src/HLearn/NP-Hard/: MPScheduling.hs  Partition.hs
HLearn-datastructures/src/HLearn/NPHard/: BinPacking.hs  KCenters.hs  MPScheduling.hs  Partition.hs  Scheduling.hs
HLearn-datastructures/src/dev-test/: CoverTree-speed.hs  Criterion-KDTree.hs  DependentIndexing.hs
HLearn-datastructures/src/examples/: partionblog.lhs  partition-tmr.lhs
HLearn-datastructures/src/examples/Guidelines/: Author.lhs
HLearn-datastructures/src/examples/knn-compare/: DataGenerator.hs  KDIsoTest.hs  KNN.hs
HLearn-datastructures/src/examples/tmr/: partition.lhs  partition.tex  tmr.bst  tmr.cls
HLearn-distributions/: HLearn-distributions.cabal
HLearn-distributions/src/HLearn/Evaluation/: CrossValidation.hs
HLearn-distributions/src/HLearn/Gnuplot/: Distributions.hs
HLearn-distributions/src/HLearn/Models/: Distributions.hs
HLearn-distributions/src/HLearn/Models/Distributions/: Binomial.hs  CatContainer.hs  Categorical.hs  Common.hs  Gaussian.hs  Gaussian.lhs  GaussianOld.hs  GaussianOld2.hs  Gnuplot.hs  KernelDensityEstimator.hs  Kernels.hs  Moments.hs  MomentsVectorUnboxed.hs  MultiCategorical.hs  MultiNormal.hs  Multivariate.hs  Poisson.hs  Uniform.hs  Unital.hs  lhs2pdf
HLearn-distributions/src/HLearn/Models/Distributions/Experimental/: InverseCoFunctor.hs  ParticleFunctor.hs
HLearn-distributions/src/HLearn/Models/Distributions/Multivariate/: CatContainer.hs  Interface.hs  MultiNormal.hs  Multivariate.hs  Unital.hs
HLearn-distributions/src/HLearn/Models/Distributions/Univariate/: Binomial.hs  Categorical.hs  Exponential.hs  Gaussian.lhs  Geometric.hs  KernelDensityEstimator.hs  LogNormal.hs  Moments.hs  Normal.hs  Poisson.hs  Student.hs  Uniform.hs
HLearn-distributions/src/HLearn/Models/Distributions/Visualization/: Gnuplot.hs  Graphviz.hs
HLearn-distributions/src/dev-test/: so-test.hs
HLearn-distributions/src/examples/: Criterion.hs  SpaceTests.hs  blog-categorical-algebra.lhs  blog-multivariate.lhs  blog.lhs  blogmultivariate.lhs  demo2.hs  diagrams.hs  dynamic.hs  manual_instances.hs  multicriterion.hs  nukes.hs  nukes.lhs  person.hs
HLearn-distributions/src/examples/HomTree-plots/: Plots.hs
HLearn-distributions/src/examples/blog-categorical-functor/: blog-categorical-functor.lhs  blog-categorical-functor.tex
HLearn-ensemble/: HLearn-ensemble.cabal
HLearn-ensemble/src/HLearn/Models/: Ensemble.hs
HLearn-evaluation/: HLearn-evaluation.cabal
HLearn-evaluation/src/HLearn/Evaluation/: CrossValidation.hs  Metrics.hs
HLearn-markov/: HLearn-markov.cabal
HLearn-markov/src/HLearn/Models/Markov/: MarkovChain.hs  MarkovChain.lhs
HLearn-markov/src/examples/: blogmc.lhs
HLearn-regression/: HLearn-classification.cabal
HLearn-regression/src/HLearn/Models/: Regression.hs
(+635 files in other folders)
