Name:                HLearn
Version:             2.0.0.0
Synopsis:            Homomorphic machine learning for classification, regression, distributions, etc.
Description:         Homomorphic machine learning description. 
Category:            Data Mining, Machine Learning, Algorithms, Data structures
License:             BSD3
License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8
homepage:            http://github.com/mikeizbicki/HLearn/
bug-reports:         http://github.com/mikeizbicki/HLearn/issues

Library
    Build-Depends:      
        -- common dependencies
        base                >= 3 && < 5,
        template-haskell,
        containers          >= 0.5,
        vector              >= 0.10,
        array               >= 0.4,
        
        erf                 >= 2.0,
        gamma               >= 0.9,
        logfloat            >= 0.12,

        -- my packages
        ConstraintKinds     >= 1.1.0,

        -- are these needed?
        statistics          >= 0.10,
        random              >= 1.0.1,
        MonadRandom         >= 0.1,
        parallel            >= 3.2,
        deepseq             >= 1.3,
        hashable            == 1.1.2.5,
        primitive           >= 0.5,
        vector-algorithms   >= 0.5.4,
        vector-th-unbox     >= 0.2,
        list-extras         >= 0.4,
        heap                >= 1.0.0,
        hmatrix             >= 0.15.0.1,
        dlist               >= 0.5,
        split               >= 0.2.2,
        semigroups          >= 0.9,
        memoize             >= 0.6,
        cassava             >= 0.2.2,
        strict              >= 0.3.2,
        normaldistribution  >= 1.1.0.3,
        mtl                 >= 2.1.2,
        
        ghc-prim, 

        -- tests
        QuickCheck          >= 2.6,

        -- visualize

        --diagrams-svg        >= 0.6,
        --diagrams-lib        >= 0.6,
        process             >= 1.1,
        graphviz            >= 2999.16
        
    hs-source-dirs:     
        src

    ghc-options:        
        -rtsopts 
        -threaded
        -fllvm
        -O2
        -funbox-strict-fields
        -auto-all 
        -caf-all 

    Exposed-modules:
        HLearn.Algebra
        HLearn.Algebra.Common
        HLearn.Algebra.LinearAlgebra
        HLearn.Algebra.Functions
        HLearn.Algebra.Types.Frac
        HLearn.Algebra.Models.HomTrainer
        HLearn.Algebra.Models.CoHomTrainer
        HLearn.Algebra.Models.Lame
        HLearn.Algebra.Structures.CanError
        HLearn.Algebra.Structures.Comonoid
        HLearn.Algebra.Structures.Groups
        HLearn.Algebra.Structures.MetricSpace
        HLearn.Algebra.Structures.Modules
        HLearn.Algebra.Structures.Topology
        HLearn.Algebra.Structures.Free.AddUnit
        
        HLearn.DataStructures.SortedVector
        HLearn.DataStructures.CoverTree
        HLearn.DataStructures.SpaceTree
        HLearn.DataStructures.SpaceTree.Algorithms.NearestNeighbor
        HLearn.DataStructures.SpaceTree.Algorithms.RangeSearch
        HLearn.DataStructures.SpaceTree.DualTreeMonoids
        HLearn.DataStructures.SpaceTree.Simple
        HLearn.DataStructures.StrictList
        HLearn.DataStructures.StrictVector

        HLearn.Evaluation.CrossValidation
        
        HLearn.Models.Classifiers
        HLearn.Models.Classifiers.Common
        HLearn.Models.Classifiers.LogisticRegression
        HLearn.Models.Classifiers.NearestNeighbor
        HLearn.Models.Classifiers.NaiveNN
        HLearn.Models.Classifiers.Perceptron
        HLearn.Models.Classifiers.Centroid

        HLearn.Metrics.Generic
        HLearn.Metrics.Lebesgue
        HLearn.Metrics.Jaccard
        HLearn.Metrics.Mahalanobis
        HLearn.Metrics.Mahalanobis.ITML
        HLearn.Metrics.Mahalanobis.Lego
        HLearn.Metrics.Mahalanobis.LegoPaper
        HLearn.Metrics.Mahalanobis.Mega
        HLearn.Metrics.Mahalanobis.Normal
        HLearn.Metrics.String.Levenshtein
        HLearn.Metrics.String.Hamming
        
        HLearn.Models.Distributions
        HLearn.Models.Distributions.Common
        HLearn.Models.Distributions.Visualization.Gnuplot
        HLearn.Models.Distributions.Univariate.Binomial
        HLearn.Models.Distributions.Univariate.Categorical
        HLearn.Models.Distributions.Univariate.Exponential
        HLearn.Models.Distributions.Univariate.Geometric
        HLearn.Models.Distributions.Univariate.LogNormal
        HLearn.Models.Distributions.Univariate.Normal
        HLearn.Models.Distributions.Univariate.Poisson
        HLearn.Models.Distributions.Univariate.Internal.MissingData
        HLearn.Models.Distributions.Univariate.Internal.Moments
        HLearn.Models.Distributions.Multivariate.MultiNormalFast

        HLearn.Optimization.Amoeba
        HLearn.Optimization.Conic
        HLearn.Optimization.Common
        HLearn.Optimization.GradientDescent
        HLearn.Optimization.LineMinimization
        HLearn.Optimization.NewtonRaphson
        
        HLearn.NPHard.Scheduling
        HLearn.NPHard.BinPacking


    Extensions:
        FlexibleInstances
        FlexibleContexts
        MultiParamTypeClasses
        FunctionalDependencies
        UndecidableInstances
        ScopedTypeVariables
        BangPatterns
        TypeOperators
        GeneralizedNewtypeDeriving
        --DataKinds
        TypeFamilies
        --PolyKinds
        StandaloneDeriving
        GADTs
        KindSignatures
        ConstraintKinds
        DeriveDataTypeable

test-suite tests
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src/test
  main-is:
      Spec.hs

  build-depends:
    base == 4.*,
    hspec >= 1.0,
    filepath,
    directory,

    -- common dependencies
    base                >= 3 && < 5,
    template-haskell,
    containers          >= 0.5,
    vector              >= 0.10,

    erf                 >= 2.0,
    gamma               >= 0.9,
    logfloat            >= 0.12,
    HLearn,

    -- my packages
    ConstraintKinds     >= 1.1.0,

    -- are these needed?
    statistics          >= 0.10,
    random              >= 1.0.1,
    MonadRandom         >= 0.1,
    parallel            >= 3.2,
    deepseq             >= 1.3,
    hashable            == 1.1.2.5,
    primitive           >= 0.5,
    vector-algorithms   >= 0.5.4,
    vector-th-unbox     >= 0.2,
    list-extras         >= 0.4,
    heap                >= 1.0.0,
    hmatrix             >= 0.15.0.1,
    dlist               >= 0.5,
    split               >= 0.2.2,
    semigroups          >= 0.9,
    normaldistribution  >= 1.1.0.3,

    QuickCheck          >= 2.6,

    -- visualize
    diagrams-svg        >= 0.6,
    diagrams-lib        >= 0.6,
    process             >= 1.1,
    graphviz            >= 2999.16
