Name:                HLearn
Version:             2.0.1.0
Synopsis:            Homomorphic machine learning
Category:            Data Mining, Machine Learning, Algorithms, Data structures
License:             BSD3
License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8
homepage:            http://github.com/mikeizbicki/HLearn/
bug-reports:         http://github.com/mikeizbicki/HLearn/issues

Description:
    HLearn is an experimental, but high performance machine learning library.
    For example, it currently has the world's fastest nearest neighbor implementation.
    It uses <http://github.com/mikeizbicki/subhask subhask> for fast numeric computations.
    The <http://github.com/mikeizbicki/hlearn/blob/master/README.md README> on github contains much more information.

source-repository head
    type: git
    location: http://github.com/mikeizbicki/hlearn

--------------------------------------------------------------------------------

Library
    Build-Depends:
        -- common dependencies
        base                >= 4.8 && <4.9,
        subhask             == 0.1.1.0,

        -- control
        mtl                 >= 2.1.2,

        -- i/o
        ansi-terminal       >= 0.6.1.1,
        directory           >= 1.2,
        time                >= 1.4.2

        -- visualization
--         diagrams-svg        >= 0.6,
--         diagrams-lib        >= 1.3,
--         process             >= 1.1
--         graphviz            >= 2999.16

    hs-source-dirs:
        src

    Exposed-modules:

        HLearn.History
        HLearn.History.Timing

--         HLearn.Data.Graph
--         HLearn.Data.Image
        HLearn.Data.LoadData
        HLearn.Data.SpaceTree
        HLearn.Data.SpaceTree.CoverTree
        HLearn.Data.SpaceTree.CoverTree_Specialized
        HLearn.Data.SpaceTree.CoverTree.Unsafe
        HLearn.Data.SpaceTree.Algorithms
        HLearn.Data.SpaceTree.Algorithms_Specialized

--         HLearn.Evaluation.CrossValidation

        HLearn.Classifiers.Linear
        HLearn.Models.Distributions

        HLearn.Optimization.Multivariate
        HLearn.Optimization.Univariate

--         HLearn.Optimization.Amoeba
--         HLearn.Optimization.Conic
--         HLearn.Optimization.StepSize
--         HLearn.Optimization.StochasticGradientDescent
--         HLearn.Optimization.StepSize.Linear
--         HLearn.Optimization.StepSize.Const
--         HLearn.Optimization.StepSize.AlmeidaLanglois

    Other-modules:

    Extensions:
        FlexibleInstances
        FlexibleContexts
        MultiParamTypeClasses
        FunctionalDependencies
        UndecidableInstances
        ScopedTypeVariables
        BangPatterns
        TypeOperators
        GeneralizedNewtypeDeriving
        TypeFamilies
        StandaloneDeriving
        GADTs
        KindSignatures
        ConstraintKinds
        DeriveDataTypeable
        RankNTypes
        ImpredicativeTypes

        DataKinds
        PolyKinds
        AutoDeriveTypeable
        TemplateHaskell
        QuasiQuotes
        RebindableSyntax
        NoImplicitPrelude
        UnboxedTuples
        MagicHash
        PolymorphicComponents
        ExplicitNamespaces
        EmptyDataDecls

        PartialTypeSignatures
        MultiWayIf

--------------------------------------------------------------------------------

Test-Suite BashTests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            BashTests.hs
    build-depends:      base, process

---------------------------------------

Test-Suite QuickCheck-Unoptimized
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            QuickCheck.hs

    ghc-options:
        -O0

    build-depends:
        subhask,
        HLearn,
        test-framework-quickcheck2  >= 0.3.0,
        test-framework              >= 0.8.0

Test-Suite QuickCheck-Optimized
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            QuickCheck.hs

    ghc-options:
        -O1

    build-depends:
        subhask,
        HLearn,
        test-framework-quickcheck2  >= 0.3.0,
        test-framework              >= 0.8.0

---------------------------------------

Test-Suite Example0001
    type:               exitcode-stdio-1.0
    hs-source-dirs:     examples
    main-is:            example0001-optimization-univariate.hs
    build-depends:      HLearn, subhask, base

Test-Suite Example0002
    type:               exitcode-stdio-1.0
    hs-source-dirs:     examples
    main-is:            example0002-optimization-multivariate.hs
    build-depends:      HLearn, subhask, base

Test-Suite Example0003
    type:               exitcode-stdio-1.0
    hs-source-dirs:     examples
    main-is:            example0003-classification.hs
    build-depends:      HLearn, subhask, base

--------------------------------------------------------------------------------

executable hlearn-allknn
    main-is:            Main.hs
    hs-source-dirs:     executables/hlearn-allknn

    ghc-options:
        -threaded
        -rtsopts

        -funbox-strict-fields
        -fexcess-precision

--         -prof -osuf p_o -hisuf p_hi

        -fllvm
        -optlo-O3
        -optlo-enable-fp-mad
        -optlo-enable-no-infs-fp-math
        -optlo-enable-no-nans-fp-math
        -optlo-enable-unsafe-fp-math

--         -ddump-to-file
--         -ddump-rule-firings
--         -ddump-rule-rewrites
--         -ddump-rules
--         -ddump-simpl
--         -ddump-simpl-stats
--         -dppr-debug
--         -dsuppress-module-prefixes
--         -dsuppress-uniques
--         -dsuppress-idinfo
--         -dsuppress-coercions
--         -dsuppress-type-applications

--         -ddump-cmm

    build-depends:
        base           ,
        HLearn         ,
        subhask         ,

        cmdargs,
        MonadRandom
