Name:                HMine
Version:             0.0.0.1
Description:         Data mining suite
Category:            Data Mining
License:             GPL
License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8

-- Executable PerformanceTests
--    Main-is:            PerformanceTests.hs
-- Executable DataExplore
--    Main-is:            BoostingEvaluator.hs

Library
    Build-Depends:      base >= 3 && < 5, 
                        bytestring,
                        vector,
                        primitive,
                        deepseq,
                        logfloat,
                        binary,
                        array,
                        vector-binary-instances,
                        semigroups,
                        list-extras,
                        split,
                        random,
                        math-functions,
                        containers,
                        statistics,
                        MonadRandom,
                        vector-space,
                        ansi-terminal,
                        parsec,
                        QuickCheck,
                        hashable,
                        safe,
                        parallel
                        -- HMine
    hs-source-dirs:     src
    ghc-options:        -rtsopts -auto-all -caf-all -O2 
    Exposed-modules:    
        HMine.Math.Algebra
        HMine.Math.TypeClasses
        HMine.Math.Functors
        