Name:                HLearn
Version:             2.0.0.0
Synopsis:            Homomorphic machine learning for classification, regression, distributions, etc.
Description:         Homomorphic machine learning description.
Category:            Data Mining, Machine Learning, Algorithms, Data structures
License:             BSD3
License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.8
homepage:            http://github.com/mikeizbicki/HLearn/
bug-reports:         http://github.com/mikeizbicki/HLearn/issues

Library
    Build-Depends:
        -- common dependencies
        base                >= 3 && < 5,
        ghc-prim,
        template-haskell,

        -- control
        containers          >= 0.5,
        unordered-containers>=0.2.4,
        vector              >= 0.10,
        array               >= 0.4,
        lens                >= 4.0,
        primitive           >= 0.5,
        vector-algorithms   >= 0.5.4,
        vector-th-unbox     >= 0.2,
        list-extras         >= 0.4,
        parallel            >= 3.2,
        deepseq             >= 1.3,
        mtl                 >= 2.1.2,

        pipes               >= 4.1.2,
        ansi-terminal       >= 0.6.1.1,
        directory           >= 1.2,

        -- my packages
        ConstraintKinds     >= 1.2.0,
        typeparams          >= 0.0.6,
        subhask             >= 0.1,
--         simd                >= 0.1.0.1,

        -- math dependencies
        erf                 >= 2.0,
        gamma               >= 0.9,
        logfloat            >= 0.12,
--         hmatrix             == 0.15.2.2,
        hmatrix             >= 0.16.0.5,
        MonadRandom         >= 0.1,

        -- are these needed?
        statistics          >= 0.10,
        random              >= 1.0.1,
        hashable            >= 1.1.2.5,
        heap                >= 1.0.0,
        dlist               >= 0.5,
        split               >= 0.2.2,
        semigroups          >= 0.9,
        memoize             >= 0.6,
        cassava             >= 0.2.2,
        strict              >= 0.3.2,
        normaldistribution  >= 1.1.0.3,
        time                >= 1.4.2,

        bytestring          >= 0.10.4,

        -- tests
        QuickCheck          >= 2.6,

        -- visualization

        diagrams-svg        >= 0.6,
        diagrams-lib        >= 0.6,
        process             >= 1.1,
        graphviz            >= 2999.16

    hs-source-dirs:
        src

    ghc-options:
        -O
--         -O2
        -funbox-strict-fields
        -fcontext-stack=100

--         -ddump-to-file
--
--         -ddump-simpl
--         -ddump-simpl-stats
--         -dsuppress-module-prefixes
--         -dsuppress-uniques
--         -dsuppress-idinfo
--         -dsuppress-coercions
--         -dsuppress-type-applications
--         -ddump-rule-firings
--         -ddump-rule-rewrites
--         -ddump-rules
--         -dppr-debug

--         -ddump-cmm

    Exposed-modules:

        HLearn.History
--         HLearn.History.DisplayMethods
        HLearn.History.Timing

        HLearn.Data.Graph
        HLearn.Data.Image
        HLearn.Data.LoadData
        HLearn.Data.SpaceTree
        HLearn.Data.SpaceTree.CoverTree
        HLearn.Data.SpaceTree.Algorithms.NearestNeighbor
--         HLearn.Data.SpaceTree.Algorithms.RangeSearch
        HLearn.Data.UnsafeVector

--         HLearn.Evaluation.CrossValidation
--
--         HLearn.Models.Classifiers
--         HLearn.Models.Classifiers.Common
--         HLearn.Models.Classifiers.LinearClassifier
-- --         HLearn.Models.Classifiers.KernelizedLinearClassifier
--         HLearn.Models.Classifiers.NearestNeighbor
--         HLearn.Models.Classifiers.NaiveNN
--         HLearn.Models.Classifiers.Perceptron
--         HLearn.Models.Classifiers.Centroid

--         HLearn.Metrics.Mahalanobis
--         HLearn.Metrics.Mahalanobis.ITML
--         HLearn.Metrics.Mahalanobis.Lego
--         HLearn.Metrics.Mahalanobis.LegoPaper
--         HLearn.Metrics.Mahalanobis.Mega
--         HLearn.Metrics.Mahalanobis.Normal
--
--         HLearn.Models.Distributions
        HLearn.Models.Distributions.Common
--         HLearn.Models.Distributions.Visualization.Gnuplot
--         HLearn.Models.Distributions.Univariate.Binomial
--         HLearn.Models.Distributions.Univariate.Categorical
--         HLearn.Models.Distributions.Univariate.Exponential
--         HLearn.Models.Distributions.Univariate.Geometric
--         HLearn.Models.Distributions.Univariate.LogNormal
        HLearn.Models.Distributions.Univariate.Normal
--         HLearn.Models.Distributions.Univariate.Poisson
--         HLearn.Models.Distributions.Univariate.Internal.MissingData
        HLearn.Models.Distributions.Univariate.Internal.Moments
--         HLearn.Models.Distributions.Multivariate.MultiNormalFast

--         HLearn.Optimization.Amoeba
--         HLearn.Optimization.Conic
--         HLearn.Optimization.Common
--         HLearn.Optimization.Trace
        HLearn.Optimization.GradientDescent
--         HLearn.Optimization.StochasticGradientDescent
        HLearn.Optimization.LineMinimization.Univariate
        HLearn.Optimization.LineMinimization.Multivariate

--         HLearn.Optimization.StepSize
--         HLearn.Optimization.NewtonRaphson
--         HLearn.Optimization.QuasiNewton

--         HLearn.Optimization.StepSize.Linear
--         HLearn.Optimization.StepSize.Const
--         HLearn.Optimization.StepSize.AlmeidaLanglois

--         HLearn.NPHard.Scheduling
--         HLearn.NPHard.BinPacking

    Other-modules:

    Extensions:
        FlexibleInstances
        FlexibleContexts
        MultiParamTypeClasses
        FunctionalDependencies
        UndecidableInstances
        ScopedTypeVariables
        BangPatterns
        TypeOperators
        GeneralizedNewtypeDeriving
        TypeFamilies
        StandaloneDeriving
        GADTs
        KindSignatures
        ConstraintKinds
        DeriveDataTypeable
        RankNTypes
        ImpredicativeTypes

        DataKinds
        PolyKinds
        AutoDeriveTypeable
        TemplateHaskell
        QuasiQuotes
        RebindableSyntax
        NoImplicitPrelude
        UnboxedTuples
        MagicHash
        PolymorphicComponents
        ExplicitNamespaces
        EmptyDataDecls

-- executable hlearn-linear
--     main-is:
--         hlearn-linear.hs
--
--     hs-source-dirs:
--         src/exec
--
--     ghc-options:
--         -O
--         -funbox-strict-fields
--
--     build-depends:
--
--         base                >= 4.7,
--         HLearn              >= 2.0,
--         subhask             >= 0.1,
--
--         vector              >= 0.10.11,
--         hmatrix             >= 0.15.2.2,
--         containers          >= 0.5.5.1,
--
--         cmdargs             >= 0.10.7,
--         cassava             >= 0.4.1,
--         bytestring          >= 0.10.4,
--         deepseq             >= 1.3.0.2,
--         QuickCheck          >= 2.7.5,
--         parallel            >= 3.2.0.4,
--         time                >= 1.4.2,
--
--         vector-algorithms   >= 0.6.0.1,
--         MonadRandom         >= 0.1.13,
--         list-extras         >= 0.4.1.3
--
--     c-sources:
--         cbits/emd.c
--         cbits/ct.c
--
--     cc-options:
--         -- optimization options
--         -O3
--         -msse2
-- --         -mavx
--         -ffast-math
--         -fassociative-math
--         -ftree-vectorize
-- --         -march=native
--         -mfpmath=sse
--
--         -- opencv options
--         -fPIC
--
--     extra-libraries:
--         opencv_core
--         opencv_highgui
--         opencv_imgproc
--         opencv_imgcodecs

-- executable hlearn-embed
--     main-is:
--         hlearn-embed.hs
--
--     hs-source-dirs:
--         src/exec
--
--     ghc-options:
--         -threaded
--         -rtsopts
--
--         -O
--         -funbox-strict-fields
--         -fexcess-precision
--         -fcontext-stack=100
--
--         -fllvm
--         -optlo-O3
--         -optlo-enable-fp-mad
--         -optlo-enable-no-infs-fp-math
--         -optlo-enable-no-nans-fp-math
--         -optlo-enable-unsafe-fp-math
--
--     build-depends:
--
--         base            >=4.7,
--         HLearn          >=2.0,
--         typeparams      >=0.0.6,
--         subhask         >=0.0.1,
--
--         MonadRandom     >=0.1.13,
--         mtl             >=2.1.3

-- executable hlearn-allknn
--     main-is:
--         hlearn-allknn.hs
--
--     hs-source-dirs:
--         src/exec
--
--     ghc-options:
-- --         -Wall
--         -threaded
--         -rtsopts
-- --         -with-rtsopts=-N
--
--         -O
-- --         -O2
--         -funbox-strict-fields
--         -fexcess-precision
--         -fcontext-stack=100
--
--         -fllvm
--         -optlo-O3
--         -optlo-enable-fp-mad
--         -optlo-enable-no-infs-fp-math
--         -optlo-enable-no-nans-fp-math
--         -optlo-enable-unsafe-fp-math
--
--         -ddump-to-file
--
-- --         -ddump-rule-firings
-- --         -ddump-rule-rewrites
-- --         -ddump-rules
-- --         -ddump-simpl
-- --         -ddump-simpl-stats
-- --         -dppr-debug
-- --         -dsuppress-module-prefixes
-- --         -dsuppress-uniques
-- --         -dsuppress-idinfo
-- --         -dsuppress-coercions
-- --         -dsuppress-type-applications
--
-- --         -ddump-cmm
--
--     build-depends:
--
--         base            >=4.7,
--         HLearn          >=2.0,
--         ConstraintKinds >=1.3,
-- --         simd            >=0.1,
--         typeparams      >=0.0.6,
--         subhask         >=0.0.1,
--
--         directory           >= 1.2,
--         filepath        >= 1.3.0.2,
--         deepseq >=1.3,
--         cassava >=0.3,
--         containers >=0.5,
--         unordered-containers >=0.2.4,
--         vector >=0.10,
--         bytestring >=0.10,
--         tagged >=0.7,
--         reflection >=1.3,
--         time >=1.4,
--         cmdargs >=0.10,
--         QuickCheck >=2.6,
--         parallel >=3.2,
--         MonadRandom >=0.1,
--         vector-algorithms >= 0.5,
--         strict >=0.3,
--         vector-th-unbox >= 0.2,
--         primitive >= 0.5,
--         deepseq >= 1.3,
-- --         hmatrix             == 0.15.2.2
--         hmatrix             >= 0.16.0.5
--
